XW-1300 | fix chevron position when figcaption is visible

--- a/front/main/app/styles/component/_article-media.scss
+++ b/front/main/app/styles/component/_article-media.scss
@@ -44,8 +44,8 @@
 
 	// First line is for single images
 	// Second is for galleries
-	&.has-caption .chevron,
-	.has-caption .chevron {
+	&.has-figcaption .chevron,
+	.has-figcaption .chevron {
 		margin-bottom: 50px;
 	}
 }
